# Cryptid

./: Board.py  BoardSections.py  Clue.py  Even.py  Hex.py  Makefile  README.md  SetupCard.py  Tile.py  mypy.ini  pyproject.toml  ruff.toml  testing.py
Cryptid/: Board.py  BoardSections.py  Clue.py  Even.py  Hex.py  SetupCard.py  Tile.py  testing.py
cryptid/: Board.py  BoardSections.py  Clue.py  Even.py  Hex.py  SetupCard.py  Tile.py  board.py  board_sections.py  clue.py  even.py  hex.py  setup_card.py  testing.py  tile.py
tests/: drawing.py  manual_testing.py  test_utils.py
tests/Test_Hexes/: test_axial_coordinate_hex.py  test_cube_coordinate_hex.py  test_double_height_coordinate_hex.py  test_double_width_coordinate_hex.py  test_hex_conversions.py
tests/Test_Tiles/: test_tile.py
tests/Test_board/: test_board.py  test_board_sections.py
tests/other_testing/: drawing.py  manual_testing.py
tests/unit_tests/: test_clues.py  test_setup_cards.py
tests/unit_tests/board_tests/: test_board.py
tests/unit_tests/hex_tests/: test_axial_coordinate_hex.py  test_cube_coordinate_hex.py  test_double_height_coordinate_hex.py  test_double_width_coordinate_hex.py  test_even_row_offset_coordinate_hex.py  test_hex_conversions.py
tests/unit_tests/tile_tests/: test_tile_components.py
