[project]
name = "cryptid"
version = "0.1.0"
description = "Python Implimentation of Boardgame Cryptid https://www.playcryptid.com"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.8.0",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]
